--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
                             <th>Vezetéknév</th>
                             <th>Keresztnév</th>
                             <th>Életkor</th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -28,78 +29,130 @@
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
+                            <td><div class="btn-group">
+                                <button class="btn-info btn">Módosítás</button>
+                                <button class="btn btn-danger">Törlés</button>
+                            </div></td>
                         </tr>
                         <tr class="table-success">
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
+                            <td><div class="btn-group">
+                                <button class="btn-info btn">Módosítás</button>
+                                <button class="btn btn-danger">Törlés</button>
+                            </div></td>
                         </tr>
                         <tr class="table-active">
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
+                            <td><div class="btn-group">
+                                <button class="btn-info btn">Módosítás</button>
+                                <button class="btn btn-danger">Törlés</button>
+                            </div></td>
                         </tr>
                         <tr class="table-warning">
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
+                            <td><div class="btn-group">
+                                <button class="btn-info btn">Módosítás</button>
+                                <button class="btn btn-danger">Törlés</button>
+                            </div></td>
                         </tr>
                         <tr class="table-danger">
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
+                            <td><div class="btn-group">
+                                <button class="btn-info btn">Módosítás</button>
+                                <button class="btn btn-danger">Törlés</button>
+                            </div></td>
                         </tr>
                         <tr class="table-info">
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
+                            <td><div class="btn-group">
+                                <button class="btn-info btn">Módosítás</button>
+                                <button class="btn btn-danger">Törlés</button>
+                            </div></td>
                         </tr>
                         <tr>
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
+                            <td><div class="btn-group">
+                                <button class="btn-info btn">Módosítás</button>
+                                <button class="btn btn-danger">Törlés</button>
+                            </div></td>
                         </tr>
                         <tr>
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
+                            <td><div class="btn-group">
+                                <button class="btn-info btn">Módosítás</button>
+                                <button class="btn btn-danger">Törlés</button>
+                            </div></td>
                         </tr>
                         <tr>
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
+                            <td><div class="btn-group">
+                                <button class="btn-info btn">Módosítás</button>
+                                <button class="btn btn-danger">Törlés</button>
+                            </div></td>
                         </tr>
                         <tr>
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
+                            <td><div class="btn-group">
+                                <button class="btn-info btn">Módosítás</button>
+                                <button class="btn btn-danger">Törlés</button>
+                            </div></td>
                         </tr>
                         <tr>
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
+                            <td><div class="btn-group">
+                                <button class="btn-info btn">Módosítás</button>
+                                <button class="btn btn-danger">Törlés</button>
+                            </div></td>
                         </tr>
                         <tr>
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
+                            <td><div class="btn-group">
+                                <button class="btn-info btn">Módosítás</button>
+                                <button class="btn btn-danger">Törlés</button>
+                            </div></td>
                         </tr>
                         <tr>
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
+                            <td><div class="btn-group">
+                                <button class="btn-info btn">Módosítás</button>
+                                <button class="btn btn-danger">Törlés</button>
+                            </div></td>
                         </tr>
                     </tbody>
                 </table>
