--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="lib/bootstrap-4.5.0-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+        integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
     <title>About</title>
 </head>
 
@@ -29,130 +31,156 @@
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
-                            <td><div class="btn-group">
-                                <button class="btn-info btn">Módosítás</button>
-                                <button class="btn btn-danger">Törlés</button>
-                            </div></td>
+                            <td>
+                                <div class="btn-group">
+                                    <button class="btn-info btn">Módosítás</button>
+                                    <button class="btn btn-danger">Törlés</button>
+                                </div>
+                            </td>
                         </tr>
                         <tr class="table-success">
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
-                            <td><div class="btn-group">
-                                <button class="btn-info btn">Módosítás</button>
-                                <button class="btn btn-danger">Törlés</button>
-                            </div></td>
+                            <td>
+                                <div class="btn-group">
+                                    <button class="btn-info btn">Módosítás</button>
+                                    <button class="btn btn-danger">Törlés</button>
+                                </div>
+                            </td>
                         </tr>
                         <tr class="table-active">
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
-                            <td><div class="btn-group">
-                                <button class="btn-info btn">Módosítás</button>
-                                <button class="btn btn-danger">Törlés</button>
-                            </div></td>
+                            <td>
+                                <div class="btn-group">
+                                    <button class="btn-info btn">Módosítás</button>
+                                    <button class="btn btn-danger">Törlés</button>
+                                </div>
+                            </td>
                         </tr>
                         <tr class="table-warning">
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
-                            <td><div class="btn-group">
-                                <button class="btn-info btn">Módosítás</button>
-                                <button class="btn btn-danger">Törlés</button>
-                            </div></td>
+                            <td>
+                                <div class="btn-group">
+                                    <button class="btn-info btn">Módosítás</button>
+                                    <button class="btn btn-danger">Törlés</button>
+                                </div>
+                            </td>
                         </tr>
                         <tr class="table-danger">
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
-                            <td><div class="btn-group">
-                                <button class="btn-info btn">Módosítás</button>
-                                <button class="btn btn-danger">Törlés</button>
-                            </div></td>
+                            <td>
+                                <div class="btn-group">
+                                    <button class="btn-info btn">Módosítás</button>
+                                    <button class="btn btn-danger">Törlés</button>
+                                </div>
+                            </td>
                         </tr>
                         <tr class="table-info">
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
-                            <td><div class="btn-group">
-                                <button class="btn-info btn">Módosítás</button>
-                                <button class="btn btn-danger">Törlés</button>
-                            </div></td>
+                            <td>
+                                <div class="btn-group">
+                                    <button class="btn-info btn">Módosítás</button>
+                                    <button class="btn btn-danger">Törlés</button>
+                                </div>
+                            </td>
                         </tr>
                         <tr>
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
-                            <td><div class="btn-group">
-                                <button class="btn-info btn">Módosítás</button>
-                                <button class="btn btn-danger">Törlés</button>
-                            </div></td>
+                            <td>
+                                <div class="btn-group">
+                                    <button class="btn-info btn">Módosítás</button>
+                                    <button class="btn btn-danger">Törlés</button>
+                                </div>
+                            </td>
                         </tr>
                         <tr>
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
-                            <td><div class="btn-group">
-                                <button class="btn-info btn">Módosítás</button>
-                                <button class="btn btn-danger">Törlés</button>
-                            </div></td>
+                            <td>
+                                <div class="btn-group">
+                                    <button class="btn-info btn">Módosítás</button>
+                                    <button class="btn btn-danger">Törlés</button>
+                                </div>
+                            </td>
                         </tr>
                         <tr>
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
-                            <td><div class="btn-group">
-                                <button class="btn-info btn">Módosítás</button>
-                                <button class="btn btn-danger">Törlés</button>
-                            </div></td>
+                            <td>
+                                <div class="btn-group">
+                                    <button class="btn-info btn">Módosítás</button>
+                                    <button class="btn btn-danger">Törlés</button>
+                                </div>
+                            </td>
                         </tr>
                         <tr>
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
-                            <td><div class="btn-group">
-                                <button class="btn-info btn">Módosítás</button>
-                                <button class="btn btn-danger">Törlés</button>
-                            </div></td>
+                            <td>
+                                <div class="btn-group">
+                                    <button class="btn-info btn">Módosítás</button>
+                                    <button class="btn btn-danger">Törlés</button>
+                                </div>
+                            </td>
                         </tr>
                         <tr>
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
-                            <td><div class="btn-group">
-                                <button class="btn-info btn">Módosítás</button>
-                                <button class="btn btn-danger">Törlés</button>
-                            </div></td>
+                            <td>
+                                <div class="btn-group">
+                                    <button class="btn-info btn">Módosítás</button>
+                                    <button class="btn btn-danger">Törlés</button>
+                                </div>
+                            </td>
                         </tr>
                         <tr>
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
-                            <td><div class="btn-group">
-                                <button class="btn-info btn">Módosítás</button>
-                                <button class="btn btn-danger">Törlés</button>
-                            </div></td>
+                            <td>
+                                <div class="btn-group">
+                                    <button class="btn-info btn">Módosítás</button>
+                                    <button class="btn btn-danger">Törlés</button>
+                                </div>
+                            </td>
                         </tr>
                         <tr>
                             <td>1</td>
                             <td>Kiss</td>
                             <td>János</td>
                             <td>55</td>
-                            <td><div class="btn-group">
-                                <button class="btn-info btn">Módosítás</button>
-                                <button class="btn btn-danger">Törlés</button>
-                            </div></td>
+                            <td>
+                                <div class="btn-group">
+                                    <button class="btn-info btn">Módosítás</button>
+                                    <button class="btn btn-danger">Törlés</button>
+                                </div>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
