--- a/about.html
+++ b/about.html
@@ -33,8 +33,12 @@
                             <td>55</td>
                             <td>
                                 <div class="btn-group">
-                                    <button class="btn-info btn">Módosítás</button>
-                                    <button class="btn btn-danger">Törlés</button>
+                                    <button class="btn-info btn">
+                                        <i class="fas fa-sync-alt"></i>
+                                    </button>
+                                    <button class="btn btn-danger">
+                                        Törlés
+                                    </button>
                                 </div>
                             </td>
                         </tr>
@@ -45,8 +49,12 @@
                             <td>55</td>
                             <td>
                                 <div class="btn-group">
-                                    <button class="btn-info btn">Módosítás</button>
-                                    <button class="btn btn-danger">Törlés</button>
+                                    <button class="btn-info btn">
+                                        <i class="fas fa-sync-alt"></i>
+                                    </button>
+                                    <button class="btn btn-danger">
+                                        Törlés
+                                    </button>
                                 </div>
                             </td>
                         </tr>
@@ -57,8 +65,12 @@
                             <td>55</td>
                             <td>
                                 <div class="btn-group">
-                                    <button class="btn-info btn">Módosítás</button>
-                                    <button class="btn btn-danger">Törlés</button>
+                                    <button class="btn-info btn">
+                                        <i class="fas fa-sync-alt"></i>
+                                    </button>
+                                    <button class="btn btn-danger">
+                                        Törlés
+                                    </button>
                                 </div>
                             </td>
                         </tr>
@@ -69,8 +81,12 @@
                             <td>55</td>
                             <td>
                                 <div class="btn-group">
-                                    <button class="btn-info btn">Módosítás</button>
-                                    <button class="btn btn-danger">Törlés</button>
+                                    <button class="btn-info btn">
+                                        <i class="fas fa-sync-alt"></i>
+                                    </button>
+                                    <button class="btn btn-danger">
+                                        Törlés
+                                    </button>
                                 </div>
                             </td>
                         </tr>
@@ -81,8 +97,12 @@
                             <td>55</td>
                             <td>
                                 <div class="btn-group">
-                                    <button class="btn-info btn">Módosítás</button>
-                                    <button class="btn btn-danger">Törlés</button>
+                                    <button class="btn-info btn">
+                                        <i class="fas fa-sync-alt"></i>
+                                    </button>
+                                    <button class="btn btn-danger">
+                                        Törlés
+                                    </button>
                                 </div>
                             </td>
                         </tr>
@@ -93,8 +113,12 @@
                             <td>55</td>
                             <td>
                                 <div class="btn-group">
-                                    <button class="btn-info btn">Módosítás</button>
-                                    <button class="btn btn-danger">Törlés</button>
+                                    <button class="btn-info btn">
+                                        <i class="fas fa-sync-alt"></i>
+                                    </button>
+                                    <button class="btn btn-danger">
+                                        Törlés
+                                    </button>
                                 </div>
                             </td>
                         </tr>
@@ -105,8 +129,12 @@
                             <td>55</td>
                             <td>
                                 <div class="btn-group">
-                                    <button class="btn-info btn">Módosítás</button>
-                                    <button class="btn btn-danger">Törlés</button>
+                                    <button class="btn-info btn">
+                                        <i class="fas fa-sync-alt"></i>
+                                    </button>
+                                    <button class="btn btn-danger">
+                                        Törlés
+                                    </button>
                                 </div>
                             </td>
                         </tr>
@@ -117,8 +145,12 @@
                             <td>55</td>
                             <td>
                                 <div class="btn-group">
-                                    <button class="btn-info btn">Módosítás</button>
-                                    <button class="btn btn-danger">Törlés</button>
+                                    <button class="btn-info btn">
+                                        <i class="fas fa-sync-alt"></i>
+                                    </button>
+                                    <button class="btn btn-danger">
+                                        Törlés
+                                    </button>
                                 </div>
                             </td>
                         </tr>
@@ -129,8 +161,12 @@
                             <td>55</td>
                             <td>
                                 <div class="btn-group">
-                                    <button class="btn-info btn">Módosítás</button>
-                                    <button class="btn btn-danger">Törlés</button>
+                                    <button class="btn-info btn">
+                                        <i class="fas fa-sync-alt"></i>
+                                    </button>
+                                    <button class="btn btn-danger">
+                                        Törlés
+                                    </button>
                                 </div>
                             </td>
                         </tr>
@@ -141,8 +177,12 @@
                             <td>55</td>
                             <td>
                                 <div class="btn-group">
-                                    <button class="btn-info btn">Módosítás</button>
-                                    <button class="btn btn-danger">Törlés</button>
+                                    <button class="btn-info btn">
+                                        <i class="fas fa-sync-alt"></i>
+                                    </button>
+                                    <button class="btn btn-danger">
+                                        Törlés
+                                    </button>
                                 </div>
                             </td>
                         </tr>
@@ -153,8 +193,12 @@
                             <td>55</td>
                             <td>
                                 <div class="btn-group">
-                                    <button class="btn-info btn">Módosítás</button>
-                                    <button class="btn btn-danger">Törlés</button>
+                                    <button class="btn-info btn">
+                                        <i class="fas fa-sync-alt"></i>
+                                    </button>
+                                    <button class="btn btn-danger">
+                                        Törlés
+                                    </button>
                                 </div>
                             </td>
                         </tr>
@@ -165,8 +209,12 @@
                             <td>55</td>
                             <td>
                                 <div class="btn-group">
-                                    <button class="btn-info btn">Módosítás</button>
-                                    <button class="btn btn-danger">Törlés</button>
+                                    <button class="btn-info btn">
+                                        <i class="fas fa-sync-alt"></i>
+                                    </button>
+                                    <button class="btn btn-danger">
+                                        Törlés
+                                    </button>
                                 </div>
                             </td>
                         </tr>
@@ -177,8 +225,12 @@
                             <td>55</td>
                             <td>
                                 <div class="btn-group">
-                                    <button class="btn-info btn">Módosítás</button>
-                                    <button class="btn btn-danger">Törlés</button>
+                                    <button class="btn-info btn">
+                                        <i class="fas fa-sync-alt"></i>
+                                    </button>
+                                    <button class="btn btn-danger">
+                                        Törlés
+                                    </button>
                                 </div>
                             </td>
                         </tr>
