--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                                         <i class="fas fa-sync-alt"></i>
                                     </button>
                                     <button class="btn btn-danger">
-                                        Törlés
+                                        <i class="fas fa-trash-alt"></i>
                                     </button>
                                 </div>
                             </td>
@@ -53,7 +53,7 @@
                                         <i class="fas fa-sync-alt"></i>
                                     </button>
                                     <button class="btn btn-danger">
-                                        Törlés
+                                        <i class="fas fa-trash-alt"></i>
                                     </button>
                                 </div>
                             </td>
@@ -69,7 +69,7 @@
                                         <i class="fas fa-sync-alt"></i>
                                     </button>
                                     <button class="btn btn-danger">
-                                        Törlés
+                                        <i class="fas fa-trash-alt"></i>
                                     </button>
                                 </div>
                             </td>
@@ -85,7 +85,7 @@
                                         <i class="fas fa-sync-alt"></i>
                                     </button>
                                     <button class="btn btn-danger">
-                                        Törlés
+                                        <i class="fas fa-trash-alt"></i>
                                     </button>
                                 </div>
                             </td>
@@ -101,7 +101,7 @@
                                         <i class="fas fa-sync-alt"></i>
                                     </button>
                                     <button class="btn btn-danger">
-                                        Törlés
+                                        <i class="fas fa-trash-alt"></i>
                                     </button>
                                 </div>
                             </td>
@@ -117,7 +117,7 @@
                                         <i class="fas fa-sync-alt"></i>
                                     </button>
                                     <button class="btn btn-danger">
-                                        Törlés
+                                        <i class="fas fa-trash-alt"></i>
                                     </button>
                                 </div>
                             </td>
@@ -133,7 +133,7 @@
                                         <i class="fas fa-sync-alt"></i>
                                     </button>
                                     <button class="btn btn-danger">
-                                        Törlés
+                                        <i class="fas fa-trash-alt"></i>
                                     </button>
                                 </div>
                             </td>
@@ -149,7 +149,7 @@
                                         <i class="fas fa-sync-alt"></i>
                                     </button>
                                     <button class="btn btn-danger">
-                                        Törlés
+                                        <i class="fas fa-trash-alt"></i>
                                     </button>
                                 </div>
                             </td>
@@ -165,7 +165,7 @@
                                         <i class="fas fa-sync-alt"></i>
                                     </button>
                                     <button class="btn btn-danger">
-                                        Törlés
+                                        <i class="fas fa-trash-alt"></i>
                                     </button>
                                 </div>
                             </td>
@@ -181,7 +181,7 @@
                                         <i class="fas fa-sync-alt"></i>
                                     </button>
                                     <button class="btn btn-danger">
-                                        Törlés
+                                        <i class="fas fa-trash-alt"></i>
                                     </button>
                                 </div>
                             </td>
@@ -197,7 +197,7 @@
                                         <i class="fas fa-sync-alt"></i>
                                     </button>
                                     <button class="btn btn-danger">
-                                        Törlés
+                                        <i class="fas fa-trash-alt"></i>
                                     </button>
                                 </div>
                             </td>
@@ -213,7 +213,7 @@
                                         <i class="fas fa-sync-alt"></i>
                                     </button>
                                     <button class="btn btn-danger">
-                                        Törlés
+                                        <i class="fas fa-trash-alt"></i>
                                     </button>
                                 </div>
                             </td>
@@ -229,7 +229,7 @@
                                         <i class="fas fa-sync-alt"></i>
                                     </button>
                                     <button class="btn btn-danger">
-                                        Törlés
+                                        <i class="fas fa-trash-alt"></i>
                                     </button>
                                 </div>
                             </td>
