--- a/bt.html
+++ b/bt.html
@@ -39,18 +39,22 @@
     </nav>
     <div class="container">
         <div class="row">
-            <div class="col">
-                <button type="button" class="btn btn-primary">Primary</button>
-                <button type="button" class="btn btn-secondary">Secondary</button>
-                <button type="button" class="btn btn-success">Success</button>
-                <button type="button" class="btn btn-danger">Danger</button>
-                <button type="button" class="btn btn-warning">Warning</button>
-                <button type="button" class="btn btn-info">Info</button>
-                <button type="button" class="btn btn-light">Light</button>
-                <button type="button" class="btn btn-dark">Dark</button>
+            <div class="col-3"></div>
+            <div class="col-6">
+                <form action="">
+                    <div class="form-group">
+                        <label for="">Feltét</label>
+                        <input type="text" name="top-input" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="">Mennyiség</label>
+                        <input type="number" name="amount-input" class="form-control">
+                    </div>
+                    <button class="btn primary">Megrendelés</button>
+                </form>
 
-                <button type="button" class="btn btn-link">Link</button>
             </div>
+            <div class="col-3"></div>
         </div>
     </div>
     <script src="js/main.js"></script>
