--- a/bt.html
+++ b/bt.html
@@ -50,7 +50,7 @@
                         <label for="">Mennyiség</label>
                         <input type="number" name="amount-input" class="form-control">
                     </div>
-                    <button class="btn primary">Megrendelés</button>
+                    <button class="btn btn-primary">Megrendelés</button>
                 </form>
 
             </div>
