--- a/bt.html
+++ b/bt.html
@@ -41,6 +41,7 @@
         <div class="row">
             <div class="col-3"></div>
             <div class="col-6">
+                <h3>Hamburger rendelés</h3>
                 <form action="">
                     <div class="form-group">
                         <label for="">Feltét</label>
