--- a/bt.html
+++ b/bt.html
@@ -51,7 +51,7 @@
                         <label for="">Mennyiség</label>
                         <input type="number" name="amount-input" class="form-control">
                     </div>
-                    <button class="btn btn-primary">Megrendelés</button>
+                    <button onclick="calcAmount()" type="button" class="btn btn-primary">Megrendelés</button>
                 </form>
 
             </div>
