--- a/bt.html
+++ b/bt.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="form-group">
                         <label for="">Mennyiség</label>
-                        <input type="number" name="amount-input" class="form-control" value="">
+                        <input type="number" name="amount-input" class="form-control" value="1">
                         <small class="form-text text-muted">
                             Minimum 1, maximum 10db.
                         </small>
