--- a/bt.html
+++ b/bt.html
@@ -53,12 +53,13 @@
                         <small class="form-text text-muted">
                             Minimum 1, maximum 10db.
                         </small>
-                        <small class="form-text text-muted">
-                            Kiszállítás költsége 4999 Ft értékű rendelésig +500 Ft, 5000 Ft értéktől a szállítás ingyenes!
-                        </small>
                     </div>
                     <div class="form-group">
                         Fizetendő: <span class="show-amount">0</span> Ft
+                        <small class="form-text text-muted">
+                            Kiszállítás költsége 4999 Ft értékű rendelésig +500 Ft, 5000 Ft értéktől a szállítás
+                            ingyenes!
+                        </small>
                     </div>
                     <button onclick="calcAmount()" type="button" class="btn btn-primary">Megrendelés</button>
                 </form>
