--- a/bt.html
+++ b/bt.html
@@ -68,8 +68,8 @@
             <div class="col-3"></div>
         </div>
     </div>
-    <script src="js/main.js"></script>
-    <script src="js/scope.js"></script>
+    <script src="js/main2.js"></script>
+    <script></script>
 </body>
 
 </html>
