--- a/bt.html
+++ b/bt.html
@@ -69,7 +69,7 @@
         </div>
     </div>
     <script src="js/main2.js"></script>
-    <script></script>
+    <script src="js/scope.js"></script>
 </body>
 
 </html>
